clusters/talos-proxmox-cluster/kube-system/error-pages/service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: error-pages-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: error-pages
  type: ClusterIP
