clusters/talos-proxmox-cluster/kube-system/error-pages/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: error-pages
  namespace: kube-system
spec:
  parentRefs:
  - name: cilium
    namespace: kube-system
  hostnames:
  - '*.novodigital.ru'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: error-pages-service
      kind: Service
      port: 8080
      namespace: kube-system
